--- a/views/nosotros.html
+++ b/views/nosotros.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <picture class="header__logo">
             <img class="header__img" src="../img/logo.png" alt="logo de herreria amtonutti">
         </picture>
@@ -29,31 +29,28 @@
             </ul>
         </nav>
     </header>
-    <main class="contenedora">
-          <section id="nosotros">
-                                 <article class="contenedor">
+    <main>
+            <section id="nosotros">
+                                 <div class="contenedor">
+                                                        <picture>
                                                             <img class="contenedor__diseñador" src="../img/nosotros_diseñando.jpg" alt="herrero diseñando planos">  
-                                 </article>                        
-                                 <article class="texto">
-                                                       <div>     
-                                                           <h2 class="contenedor__titulo">hola a todos</h2>      
+                                                        </picture> 
+                                                            <article class="texto">
+                                                       <article>     
+                                                           <h2 class="contenedor__titulo">herreria</h2>      
                                                            <p class="contenedor__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dicta magnam quia pariatur exercitationem vero fuga esse, soluta suscipit dolorem quisquam quaerat excepturi libero consectetur hic numquam? Asperiores, unde alias!</p>
-                                                       </div>
-                                 </article>
-                                                                
-                                                            
-                                
-                                 <article class="contenedor">
-                                                           <img class="contenedor__equipo" src="../img/nosotros.trabajo.PNG" alt="dos personas trabajando con una puerta de aluminio" >
-                                 </article>
-                                 <article class="texto"> 
-                                                       <div>
-                                                           <h2 class="contenedor__titulo">hola a todos</h2>
-                                                           <p class="contenedor__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dicta magnam quia pariatur exercitationem vero fuga esse, soluta suscipit dolorem quisquam quaerat excepturi libero consectetur hic numquam? Asperiores, unde alias!</p>
-                                                       </div>
-                                </article>
-                
-        </section>    
+                                                       </article>
+                                 </div>
+                                <div class="contenedor">
+                                                        <picture>
+                                                            <img class="contenedor__equipo" src="../img/nosotros.trabajo.PNG" alt="dos personas trabajando con una puerta de aluminio" >
+                                                        </picture>
+                                                        <article> 
+                                                            <h2 class="contenedor__titulo">aluminio</h2>
+                                                            <p class="contenedor__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad dicta magnam quia pariatur exercitationem vero fuga esse, soluta suscipit dolorem quisquam quaerat excepturi libero consectetur hic numquam? Asperiores, unde alias!</p>
+                                                        </article>   
+                                </div>
+            </section>    
 
     </main>
     <footer class="footer">
