trabajo_desafio_bootstrap

--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -40,13 +40,13 @@
             
             <div class="carousel-inner px-5">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../img/aluminio.barandal.png" class="d-block w-60" alt="...">
+                <img src="../img/herreria.mesa.png" class="d-block w-60" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/aluminio.puerta.jpg" class="d-block w-60" alt="...">
+                <img src="../img/aluminio.puerta.png" class="d-block w-60" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/aluminio.ventanas.png" class="d-block w-60" alt="...">
+                <img src="../img/herreria.techo.png" class="d-block w-60" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
