--- a/views/aluminio.html
+++ b/views/aluminio.html
@@ -30,7 +30,7 @@
          </nav>    
     </header>
     
-    <main class="container-lg">
+    <main class="container">
          <article class="seccion__aluminio animate__animated animate__fadeInLeft">
                      <h1 class="solucion">aluminio</h1>
                      <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit facere, sequi, deserunt perferendis dicta neque quidem dignissimos facilis architecto distinctio quibusdam beatae delectus excepturi quo labore. Qui voluptas cumque pariatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aut maiores laboriosam ex numquam asperiores delectus exercitationem a, et corrupti ab facilis quasi deleniti voluptatem quaerat quod odit cum similique?</p>
@@ -40,13 +40,13 @@
             
             <div class="carousel-inner px-5">
               <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../img/herreria.mesa.png" class="d-block w-60" alt="...">
+                <img src="../img/herreria.mesa.png" class="d-block w-auto" alt="...">
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="../img/aluminio.puerta.png" class="d-block w-60" alt="...">
+                <img src="../img/aluminio.puerta.png" class="d-block w-auto" alt="...">
               </div>
               <div class="carousel-item">
-                <img src="../img/herreria.techo.png" class="d-block w-60" alt="...">
+                <img src="../img/herreria.techo.png" class="d-block w-auto" alt="...">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -62,8 +62,8 @@
         
        
    </main>
-   <br>
-   <footer class="footer">
+  
+   <footer>
     <section>
             <div class="encabezado">            
                                    <h3 class="encabezado__horarios">horarios: de lunes a viernes de 08:00 AM a 19:00 PM</h3>
