se hace un merge entre el desafio numero n2 y master

--- a/views/herreria.html
+++ b/views/herreria.html
@@ -33,7 +33,7 @@
     <main class="container-lg">
          <article class="seccion__aluminio animate__animated animate__fadeInLeft">
                      <h1 class="solucion">herreria</h1>
-                     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit facere, sequi, deserunt perferendis dicta neque quidem dignissimos facilis architecto distinctio quibusdam beatae delectus excepturi quo labore. Qui voluptas cumque pariatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aut maiores laboriosam ex numquam asperiores delectus exercitationem a, et corrupti ab facilis quasi deleniti voluptatem quaerat quod odit cum similique?</p>
+                     <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit facere, sequi, dserunt perferendis dicta neque quidem dignissimos facilis architecto distinctio quibusdam beatae delectus excepturi quo labore. Qui voluptas cumque pariatur?Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aut maiores laboriosam ex numquam asperiores delectus exercitationem a, et corrupti ab facilis quasi deleniti voluptatem quaerat quod odit cum similique?</p>
         </article>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             
